src/main/java/com/example/RamirezRamosAlejandro_TrianaTouristApp/errors/model/ApiSubError.java
package com.example.RamirezRamosAlejandro_TrianaTouristApp.errors.model;

import lombok.experimental.SuperBuilder;

@SuperBuilder
public abstract class ApiSubError {
}
